k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: velocity-tracker
    app: velocity-tracker
  name: velocity-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: velocity-tracker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        app: velocity-tracker
    spec:
      containers:
      - image: corvimae/gdq-tracker:master
        imagePullPolicy: Always
        name: velocity-tracker
        ports:
        - containerPort: 8000
        resources: {}
        volumeMounts:
          - mountPath: /var/www/static
            name: velocity-tracker-static
      restartPolicy: Always
      volumes:
      - name: velocity-tracker-static
        persistentVolumeClaim:
          claimName: velocity-tracker-static
status: {}
