k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: velocity-tracker-service
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: velocity-tracker
