k8s/ingress.yaml
kind: Ingress
apiVersion:  networking.k8s.io/v1
metadata:
  name: velocity-tracker-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.org/websocket-services: "velocity-tracker-service"
spec:
  tls:
    - hosts:
        - "teamvelocitysr.com"
      secretName: velocity-tracker-tls
  rules:
    - host: "teamvelocitysr.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: velocity-tracker-service
                port: 
                  number: 8000
